@@ -1,6 +1,7 @@
 [test-kouwanju-server_1.0.0.1 2013-09-21 张春生]
 1、新功能：初始化项目
 2、新功能：新建dev分支
+3、新功能：添加pomelo-client功能
 
 --备注分类
 1、新功能：
